# multithread_minimax

./: Cargo.toml  README.md
benches/: example.rs
src/: example.rs  lib.rs  pool.rs  traits.rs
src/example/: four_by_four.rs  mod.rs  three_by_three.rs
tests/: 3x3.rs  minimax.rs  minimax_mt.rs  minimax_st.rs  tic-tac-toe.rs
