[package]
name = "multithread_minimax"
version = "0.1.0"
edition = "2021"
authors = ["Jonah Saltzman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"

[features]
single_threaded = []
multi_threaded = []

[[bench]]
name = "example"
harness = false