[package]
name = "multithread_minimax"
version = "0.1.0"
edition = "2021"
authors = ["Jonah Saltzman"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "example"
harness = false